# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  02 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    0 timeout now means infinite for wpa_supplicant and iwconfig wrt #90443

    iwconfig no longer downs and ups the interface after a scan - instead we
    set essid any just before doing it

  01 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now has to be told it can edit dhclient.conf instead of assuming
    it. Final fix to #100745.

    Tweaked module depends to fix order when no dhcp client is found.

    rc-daemon now works with mysql - fixes #100982, thanks to bju from the
    forums.

    We now only link /etc/{resolv,ntp,yp}.conf when the file exists.
    We now link back everything in the state dir except for .sv files.

  30 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed associate_order "forcepreferred" #100799, thanks to Benoit Boissinot.

  29 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed dhclient sending hostname #100745, thanks to Benoit Boissinot.

* baselayout-1.12.0_pre3 (29 Jul 2005)

  26 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Remove the "parallel" depend stuff from the awk backend.

    Remove the "parallel" depend stuff from the help.

  26 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Removed the "parallel" depend for init scripts and related functions.
    The RC_PARALLEL_STARTUP works well for all - no need for init scripts to
    state if they parallel or not.

    Removed loops from trace_dependencies for a nice speed boost.

    Fixed failure in runscript.sh to proceed when a non needed dependency
    (ie use, after, before) failed to start.

  25 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    If we do not have net services, check both boot and current runlevel for
    net services in trace_dependencies().  Sort services and make sure they
    are unique.
