@@ -32,7 +32,7 @@ dhcpcd_check_installed() {
         if dhcpcd -h 2>&1 | grep -q "etcDir" ; then
 	    return 0
 	else
-	    ${1:-false} && eerror "We require dhcpcd-1.3.22_p4-r12 or newer"
+	    ${1:-false} && eerror "We require dhcpcd-1.3.22_p4-r10"
 	    return 1
 	fi
     fi
@@ -145,7 +145,7 @@ dhcpcd_start() {
     # Halt any existing dhcpcd process
     dhcpcd_stop "${iface}"
 
-    [[ ! -d "${statedir}/${iface}" ]] && mkdir -p "${statedir}/${iface}"
+    [[ ! -d "${statedir}/${iface}" ]] && mkdir -m 0755 -p "${statedir}/${iface}"
     
     if [[ ${background} == "yes" ]]; then
 	eval dhcpcd ${opts} ${iface} &
