@@ -37,7 +37,7 @@ save_state() {
     local iface="$1"
     local d="${statedir}/${iface}"
 
-    [[ ! -d "${d}" ]] && mkdir -p "${d}"
+    [[ ! -d "${d}" ]] && mkdir -m 0755 -p "${d}"
     cp -a /etc/resolv.conf /etc/ntp.conf /etc/yp.conf "${d}" 2>/dev/null
 }
 
@@ -48,7 +48,7 @@ remove_state() {
     local d="${statedir}/$1"
 
     [[ -d "${d}" ]] && rm -Rf "${d}"
-    [[ ! ${2:-true} ]] && mkdir -p "${d}"
+    [[ ! ${2:-true} ]] && mkdir -m 0755 -p "${d}"
 }
 
 # void apply_state(char *interface)
